adding more gifs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
   </div>
 </div>
 
-<div class="background background-forrest">
+<div class="background background-white-on-black-data-gif">
+</div>
+
+<div class="background background-data-lady-glitch-gif">
+</div>
+
+<div class="background background-white-on-black-data-gif">
 </div>
 
 <!-- about page -->
@@ -136,7 +142,7 @@
 </div>
 </div>
 
-<div class="background background-forrest">
+<div class="background background-data-web-gif">
 </div>
 
 <!-- skills page -->
@@ -168,7 +174,7 @@
   </div><!-- end of container -->
 </div>
 
-<div class="background background-forrest">
+<div class="background background-data-web-gif">
 </div>
 
 <!-- interests page -->
@@ -207,7 +213,7 @@
     </div>
   </div>
 
-  <div class="background background-forrest">
+  <div class="background background-data-web-gif">
   </div>
 
   <!-- work page -->
@@ -287,7 +293,7 @@
     </div>
   </div>
 
-  <div class="background background-forrest">
+  <div class="background background-data-web-gif">
   </div>
 
   <!-- references -->
@@ -325,7 +331,7 @@
     </div>
   </div>
 
-  <div class="background background-forrest">
+  <div class="background background-data-web-gif">
   </div>
 
   <!-- contact page -->
@@ -384,7 +390,7 @@
   </div>
 </div>
 
-<div class="background background-forrest">
+<div class="background background-data-web-gif">
   <!-- <div>Full stack web developer with a passion for creative problem solving. With experience in Ruby on Rails and JavaScript based programming, and a background in publishing, business analysis, and law, I discovered web development through a desire to create my own writing portfolio website. I bring strong communication and research skills that help companies make sound business decisions to grow their brand and success.</div> -->
 </div>
 
