added more gifs and pics to background

--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
 </div>
 </div>
 
-<div class="background background-data-web-gif">
+<div class="background background-forrest-upside-down">
+</div>
+
+<div class="background background-clouds-gif">
+</div>
+
+<div class="background background-forrest">
 </div>
 
 <!-- skills page -->
@@ -174,7 +180,13 @@
   </div><!-- end of container -->
 </div>
 
-<div class="background background-data-web-gif">
+<div class="background background-oh-my-god-glitch-gif">
+</div>
+
+<div class="background background-tearing-colors-gif">
+</div>
+
+<div class="background background-oh-my-god-glitch-gif">
 </div>
 
 <!-- interests page -->
@@ -213,7 +225,13 @@
     </div>
   </div>
 
-  <div class="background background-data-web-gif">
+  <div class="background background-underwater-gif">
+  </div>
+
+  <div class="background background-pool-gif">
+  </div>
+
+  <div class="background background-underwater-gif">
   </div>
 
   <!-- work page -->
@@ -293,7 +311,13 @@
     </div>
   </div>
 
-  <div class="background background-data-web-gif">
+  <div class="background background-drought">
+  </div>
+
+  <div class="background background-pool-gif">
+  </div>
+
+  <div class="background background-drought">
   </div>
 
   <!-- references -->
