adding more gifs and making them look good on mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>Ethan Ryan - portfolio site</title>
+  <title>Ethan Ryan - Portfolio</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -228,7 +228,7 @@
   <div class="background background-underwater-gif">
   </div>
 
-  <div class="background background-pool-gif">
+  <div class="background background-purple-jellyfish-gif">
   </div>
 
   <div class="background background-underwater-gif">
