--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="container" id="rotate_word_container">
     <h1 class="text-center">Welcome</h1>
     <br><br>
-    <h1>Ethan Ryan is <span id="rotate_word">cool</span>.</h1>
+    <h1>Ethan Ryan is <span id="rotate_word">inventive</span>.</h1>
     <br><br>
   </div>
 </div>
