--- a/index.html
+++ b/index.html
@@ -156,23 +156,33 @@
 <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container">
     <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
+    <br>
 
-    <br><br>
+    <h4 class="text-center">Click all the skills!</h4>
+    <br>
 
     <div class="row justify-content-center">
-      <div class="col-4 list-unstyled">
+      <div class="col-3 list-unstyled">
         <li><span class="hoverSkill pulse-grow">HTML</span></li>
         <li><span class="hoverSkill pulse-grow">CSS</span></li>
-        <li><span class="hoverSkill pulse-grow">Ruby</span></li>
-        <li><span class="hoverSkill pulse-grow">Ruby on Rails</span></li>
-        <li><span class="hoverSkill pulse-grow">SQL</span></li>
+        <li><span class="hoverSkill pulse-grow">JavaScript</span></li>
       </div>
 
-      <div class="col-4 list-unstyled">
-        <li><span class="hoverSkill pulse-grow">JavaScript</span></li>
+      <div class="col-3 list-unstyled">
         <li><span class="hoverSkill pulse-grow">jQuery</span></li>
         <li><span class="hoverSkill pulse-grow">React</span></li>
+        <li><span class="hoverSkill pulse-grow">Bootstrap</span></li>
+      </div>
+
+      <div class="col-3 list-unstyled">
+        <li><span class="hoverSkill pulse-grow">SQL</span></li>
+        <li><span class="hoverSkill pulse-grow">Ruby</span></li>
+        <li><span class="hoverSkill pulse-grow">Ruby on Rails</span></li>
+      </div>
+
+      <div class="col-3 list-unstyled">
         <li><span class="hoverSkill pulse-grow">Git</span></li>
+        <li><span class="hoverSkill pulse-grow">GitHub</span></li>
         <li><span class="hoverSkill pulse-grow">WordPress</span></li>
       </div>
     </div>
