--- a/index.html
+++ b/index.html
@@ -156,10 +156,8 @@
 <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container">
     <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
-    <br>
 
-    <h4 class="text-center">Click all the skills!</h4>
-    <br>
+    <p class="text-center"><strong>Click all the skills below!</strong></p>
 
     <div class="row justify-content-center">
       <div class="col-3 list-unstyled">
