adding function that adds and removes classes to skill list items

--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
   <div class="container">
     <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
 
-    <p class="text-center"><strong>Click all the skills below!</strong></p>
+    <p class="text-center" id="you-win"><strong>Click all the skills below!</strong></p>
+    
+    <p class="text-center"><strong>((skills placeholder picture here))</strong></p>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" id="skills-list">
       <div class="col-3 list-unstyled">
         <li><span class="hoverSkill pulse-grow">HTML</span></li>
         <li><span class="hoverSkill pulse-grow">CSS</span></li>
