styling skills clicking game

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 
 <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container">
-    <h1 class="text-center">Ethan Ryan - <span class="hoverSkill pulse-grow">Skills</span></h1>
+    <h1 class="text-center">Ethan Ryan - <span class="shimmer">Skills</span></h1>
 
-    <p class="text-center" id="you-win"><strong>Click all the skills below!</strong></p>
-    
+    <p class="text-center" id="you-win"><strong><span>Click all the skills below!</span></strong></p>
+
     <p class="text-center"><strong>((skills placeholder picture here))</strong></p>
 
     <div class="row justify-content-center" id="skills-list">
