added rounded borders to each skill

--- a/index.html
+++ b/index.html
@@ -163,27 +163,27 @@
 
     <div class="row justify-content-center" id="skills-list">
       <div class="col-3 list-unstyled">
-        <li><span class="hoverSkill pulse-grow">HTML</span></li>
-        <li><span class="hoverSkill pulse-grow">CSS</span></li>
-        <li><span class="hoverSkill pulse-grow">JavaScript</span></li>
+        <li><span class="yellowSkill pulse-grow">HTML</span></li>
+        <li><span class="yellowSkill pulse-grow">CSS</span></li>
+        <li><span class="yellowSkill pulse-grow">JavaScript</span></li>
       </div>
 
       <div class="col-3 list-unstyled">
-        <li><span class="hoverSkill pulse-grow">jQuery</span></li>
-        <li><span class="hoverSkill pulse-grow">React</span></li>
-        <li><span class="hoverSkill pulse-grow">Bootstrap</span></li>
+        <li><span class="yellowSkill pulse-grow">jQuery</span></li>
+        <li><span class="yellowSkill pulse-grow">React</span></li>
+        <li><span class="yellowSkill pulse-grow">Bootstrap</span></li>
       </div>
 
       <div class="col-3 list-unstyled">
-        <li><span class="hoverSkill pulse-grow">SQL</span></li>
-        <li><span class="hoverSkill pulse-grow">Ruby</span></li>
-        <li><span class="hoverSkill pulse-grow">Ruby on Rails</span></li>
+        <li><span class="yellowSkill pulse-grow">SQL</span></li>
+        <li><span class="yellowSkill pulse-grow">Ruby</span></li>
+        <li><span class="yellowSkill pulse-grow">Ruby on Rails</span></li>
       </div>
 
       <div class="col-3 list-unstyled">
-        <li><span class="hoverSkill pulse-grow">Git</span></li>
-        <li><span class="hoverSkill pulse-grow">GitHub</span></li>
-        <li><span class="hoverSkill pulse-grow">WordPress</span></li>
+        <li><span class="yellowSkill pulse-grow">Git</span></li>
+        <li><span class="yellowSkill pulse-grow">GitHub</span></li>
+        <li><span class="yellowSkill pulse-grow">WordPress</span></li>
       </div>
     </div>
 
