playing with skills game styling and images

--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
   <div class="container">
     <h1 class="text-center">Ethan Ryan - <span class="shimmer">Skills</span></h1>
 
-    <p class="text-center" id="you-win"><strong><span>Click all the skills below!</span></strong></p>
+    <div class="winning-image background-skills-default">
+    </div>
 
-    <p class="text-center"><strong>((skills placeholder picture here))</strong></p>
+    <div class="text-center you-win"><strong><span>Click all the skills below!</span></strong></div>
 
     <div class="row justify-content-center" id="skills-list">
       <div class="col-3 list-unstyled">
@@ -177,7 +178,7 @@
       <div class="col-3 list-unstyled">
         <li><span class="yellowSkill pulse-grow">SQL</span></li>
         <li><span class="yellowSkill pulse-grow">Ruby</span></li>
-        <li><span class="yellowSkill pulse-grow">Ruby on Rails</span></li>
+        <li><span class="yellowSkill pulse-grow">Rails</span></li>
       </div>
 
       <div class="col-3 list-unstyled">
@@ -185,6 +186,10 @@
         <li><span class="yellowSkill pulse-grow">GitHub</span></li>
         <li><span class="yellowSkill pulse-grow">WordPress</span></li>
       </div>
+    </div>
+
+    <div class="text-center you-win"><strong><span>You can do it!</span></strong></div>
+    <div class="winning-image background-skills-default">
     </div>
 
   </div><!-- end of container -->
@@ -379,7 +384,7 @@
         Fill him with joy and terror by writing to him here: -->
 
         <p class="text-center">
-          Email me: <span class="email-address">ethanryan@gmail.com</span>
+          Email me: <span class="colorful-text">ethanryan@gmail.com</span>
         </p>
         <br>
         Or get in touch via social media, where you can friend me or follow me or stalk me at your leisure:
