--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <img src="assets/profile_pic_Ethan_Ryan.jpg" class="rounded" alt="Ethan Ryan profile picture">
   </div> -->
 
-  <div id="profile-pic">
+  <div id="profile-pic" class="rounded">
   </div>
 
   <h1 class="text-center">Web Developer | Writer</h1>
@@ -154,15 +154,13 @@
 <!-- skills page -->
 
 <div class="jumbotron jumbotron-fluid" id="skills">
-  <div class="container">
+  <div class="container-fluid">
     <h1 class="text-center">Ethan Ryan - <span class="shimmer">Skills</span></h1>
-
-    <div class="winning-image background-skills-default">
-    </div>
 
     <div class="text-center you-win"><strong><span>Click all the skills below!</span></strong></div>
 
-    <div class="row justify-content-center" id="skills-list">
+    <div class="row justify-content-center background-school-of-fish-gif" id="skills-list">
+
       <div class="col-3 list-unstyled">
         <li><span class="yellowSkill pulse-grow">HTML</span></li>
         <li><span class="yellowSkill pulse-grow">CSS</span></li>
@@ -189,8 +187,9 @@
     </div>
 
     <div class="text-center you-win"><strong><span>You can do it!</span></strong></div>
-    <div class="winning-image background-skills-default">
-    </div>
+
+    <!-- <div class="winning-image background-skills-default">
+    </div> -->
 
   </div><!-- end of container -->
 </div>
