--- a/index.html
+++ b/index.html
@@ -161,25 +161,25 @@
 
     <div class="row justify-content-center background-school-of-fish-gif" id="skills-list">
 
-      <div class="col-3 list-unstyled">
+      <div class="col-3 list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">HTML</span></li>
         <li><span class="yellowSkill pulse-grow">CSS</span></li>
         <li><span class="yellowSkill pulse-grow">JavaScript</span></li>
       </div>
 
-      <div class="col-3 list-unstyled">
-        <li><span class="yellowSkill pulse-grow">jQuery</span></li>
+      <div class="col-3 list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">React</span></li>
         <li><span class="yellowSkill pulse-grow">Bootstrap</span></li>
+        <li><span class="yellowSkill pulse-grow">jQuery</span></li>
       </div>
 
-      <div class="col-3 list-unstyled">
+      <div class="col-3 list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">SQL</span></li>
         <li><span class="yellowSkill pulse-grow">Ruby</span></li>
         <li><span class="yellowSkill pulse-grow">Rails</span></li>
       </div>
 
-      <div class="col-3 list-unstyled">
+      <div class="col-3 list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">Git</span></li>
         <li><span class="yellowSkill pulse-grow">GitHub</span></li>
         <li><span class="yellowSkill pulse-grow">WordPress</span></li>
