--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <div class="container-fluid">
     <h1 class="text-center">Ethan Ryan - <span class="shimmer">Skills</span></h1>
 
-    <div class="text-center you-win"><strong><span>Click all the skills below!</span></strong></div>
+    <div class="row justify-content-center text-center you-win-area"><strong><span>Click all the skills below!</span></strong></div>
 
     <div class="row justify-content-center background-school-of-fish-gif" id="skills-list">
 
@@ -168,9 +168,9 @@
       </div>
 
       <div class="col-3 list-unstyled text-center">
-        <li><span class="yellowSkill pulse-grow">React</span></li>
-        <li><span class="yellowSkill pulse-grow">Bootstrap</span></li>
         <li><span class="yellowSkill pulse-grow">jQuery</span></li>
+        <li><span class="yellowSkill pulse-grow">Bootstrap</span></li>
+        <li><span class="yellowSkill pulse-grow">React</span></li>
       </div>
 
       <div class="col-3 list-unstyled text-center">
@@ -186,10 +186,7 @@
       </div>
     </div>
 
-    <div class="text-center you-win"><strong><span>You can do it!</span></strong></div>
-
-    <!-- <div class="winning-image background-skills-default">
-    </div> -->
+    <div class="row justify-content-center text-center you-win-area"><strong><span>You can do it!</span></strong></div>
 
   </div><!-- end of container -->
 </div>
