added nerd gif to contact page

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <div class="row justify-content-center text-center you-win-area"><strong><span>Click all the skills below!</span></strong></div>
 
-    <div class="row justify-content-center background-school-of-fish-gif" id="skills-list">
+    <div class="row align-items-center justify-content-center background-school-of-fish-gif" id="skills-list">
 
       <div class="col-3 list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">HTML</span></li>
@@ -378,6 +378,15 @@
         <!-- Ethan Ryan checks his inbox compulsively and responds sporadically.
         He both craves and fears attention.
         Fill him with joy and terror by writing to him here: -->
+
+        <br>
+
+        <div class="text-center">
+          <img src="assets/nerd-gif.gif" alt="nerd gif"/>
+        </div>
+
+        <br>
+        <br>
 
         <p class="text-center">
           Email me: <span class="colorful-text">ethanryan@gmail.com</span>
