--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Bootstrap Social CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
+  <!-- jQuery UI for explode effect -->
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+  <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"> -->
 
   <!-- my custom styles for this site -->
   <link href="stylesheet.css" rel="stylesheet">
+
+
+  <!-- adding less / sass -->
+  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <script src="less.js" type="text/javascript"></script>
+
+  <!-- adding this UI here too -->
+  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
@@ -153,40 +165,35 @@
 
 <!-- skills page -->
 
+
 <div class="jumbotron jumbotron-fluid" id="skills">
   <div class="container-fluid">
-    <h1 class="text-center">Ethan Ryan - <span class="shimmer">Skills</span></h1>
+    <h1 class="text-center">Ethan Ryan - <span class="shimmer explode">Skills</span></h1>
 
-    <div class="row justify-content-center text-center you-win-area"><strong><span>Click all the skills below!</span></strong></div>
+    <div class="row justify-content-center text-center you-win-area-top"><strong><span>Click all the skills below!</span></strong></div>
 
     <div class="row align-items-center justify-content-center background-school-of-fish-gif" id="skills-list">
 
-      <div class="col-3 list-unstyled text-center">
+      <div class="col list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">HTML</span></li>
         <li><span class="yellowSkill pulse-grow">CSS</span></li>
         <li><span class="yellowSkill pulse-grow">JavaScript</span></li>
       </div>
 
-      <div class="col-3 list-unstyled text-center">
+      <div class="col list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">jQuery</span></li>
         <li><span class="yellowSkill pulse-grow">Bootstrap</span></li>
         <li><span class="yellowSkill pulse-grow">React</span></li>
       </div>
 
-      <div class="col-3 list-unstyled text-center">
+      <div class="col list-unstyled text-center">
         <li><span class="yellowSkill pulse-grow">SQL</span></li>
         <li><span class="yellowSkill pulse-grow">Ruby</span></li>
         <li><span class="yellowSkill pulse-grow">Rails</span></li>
       </div>
-
-      <div class="col-3 list-unstyled text-center">
-        <li><span class="yellowSkill pulse-grow">Git</span></li>
-        <li><span class="yellowSkill pulse-grow">GitHub</span></li>
-        <li><span class="yellowSkill pulse-grow">WordPress</span></li>
-      </div>
     </div>
 
-    <div class="row justify-content-center text-center you-win-area"><strong><span>You can do it!</span></strong></div>
+    <div class="row justify-content-center text-center you-win-area-bottom"><strong><span class="rotate_encourangement">You can do it!</span></strong></div>
 
   </div><!-- end of container -->
 </div>
