--- a/index.html
+++ b/index.html
@@ -170,7 +170,17 @@
   <div class="container-fluid">
     <h1 class="text-center">Ethan Ryan - <span class="shimmer explode">Skills</span></h1>
 
-    <div class="row justify-content-center text-center you-win-area-top"><strong><span>Click all the skills below!</span></strong></div>
+    <div class="row justify-content-center text-center you-win-area-top">
+    <div>
+      <strong><span>Click all the skills below!</span></strong>
+    </div>
+    <div class="w-100"></div>
+      <div id="count">&#8203;</div>
+    </div>
+
+    <!-- <div class="text-center count-div">
+      <strong><span id="count">&#8203;</span></strong>
+    </div> -->
 
     <div class="row align-items-center justify-content-center background-school-of-fish-gif" id="skills-list">
 
