removed exclamation mark from count seconds on Skills page

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div>
       <strong><span>Click all the skills below!</span></strong>
     </div>
-    <div class="w-100"></div>
+    <div class="w-100" style="height: 1px"></div>
       <div id="count">&#8203;</div>
     </div>
 
