hamburger icon to X

--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
 
 <body data-spy="scroll" data-target=".navbar">
 
-
   <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-primary">
-    <button class="navbar-toggler navbar-toggler-right"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarCollapse"
-    aria-controls="navbarCollapse"
-    aria-expanded="false"
-    aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler navbar-toggler-right collapsed"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarCollapse"
+      aria-controls="navbarCollapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="my-1 mx-2 white-X close">X</span>
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+
   <a class="navbar-brand" href=""><span class="shimmer-brand">Ethan Ryan</span></a>
   <!-- do i need a # in href above? don't think i want/need to call it home -->
   <div class="collapse navbar-collapse" id="navbarCollapse">
