added more apps to my portfolio

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <a href="https://en.wikipedia.org/wiki/Ethan_Allen" target="blank">Ethan Allen</a> - American patriot, Green Mountain Boy, and namesake of Ethan Allen Furniture. Or is Ethan Allen Furniture the namesake of Ethan Allen, the Green Mountain Boy? I'm not totally sure what 'namesake' means, but either way, Ethan Allen was an Ethan too.
     </div>
     <div class="col-sm">
-      <a href="https://en.wikipedia.org/wiki/Ethan_Ryan" target="blank">Ethan Ryan</a> - English football player, AKA soccer player, and no, Ethan Ryan the pro-athlete is not me, Ethan Ryan the writer and web developer, though I'm sure he sometimes thinks: "Man, it must be so fun to be a writer and web developer, instead of a professional athelete."
+      <a href="https://en.wikipedia.org/wiki/Ethan_Ryan" target="blank">Ethan Ryan</a> - English rugby player, and no, Ethan Ryan the pro-athlete is not me, Ethan Ryan the writer and web developer, though I'm sure he sometimes thinks: "Man, it must be so fun to be a writer and web developer, instead of a professional athelete."
     </div>
   </div>
 
@@ -354,7 +354,7 @@
       <div class="text-center">
         <h1><mark>Trivia Boyz</mark></h1>
         <a href="http://trivia-boyz-client.herokuapp.com/" target="blank">
-          <img src="https://media.giphy.com/media/2R2NxHmHzKUrS/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+          <img src="https://media.giphy.com/media/2R2NxHmHzKUrS/giphy.gif" class="rounded" alt="Trivia Boyz demo gif">
         </a>
         <br>
         <a href="http://trivia-boyz-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/trivia_boyz" target="blank">GitHub</a>
@@ -377,7 +377,7 @@
 
       <div class="text-center">
         <h1><mark>ToDoToday</mark></h1>
-        <img src="https://media.giphy.com/media/3oKIPjLyDHikcHJhAY/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+        <img src="https://media.giphy.com/media/3oKIPjLyDHikcHJhAY/giphy.gif" class="rounded" alt="ToDoToday demo gif">
         <br>
         <a href="https://github.com/ethanryan/to_do_today_app" target="blank">GitHub</a>
       </div>
@@ -388,6 +388,102 @@
         <li>Utilized state change to reward users with badges, points, and trophies for completing tasks
         </li>
         <li>Manipulated Virtual DOM to make app more sticky, increasing user engagement
+        </li>
+      </p>
+
+      <hr/>
+
+      <div class="text-center">
+        <h1><mark>Show the Local Weather</mark></h1>
+        <img src="https://media.giphy.com/media/3ohjUQwHFgb8Ib5TDG/giphy.gif" class="rounded" alt="Show the Local Weather demo gif">
+        <br>
+        <a href="https://codepen.io/ethanryan/full/yPzBEo/" target="blank">CodePen</a>
+      </div>
+      <br>
+      <p class="lead">
+        App displays the local weather with a corresponding gif.
+        <br>
+        <li>Utilized Giphy API and user's current position
+        </li>
+        <li>Built with HTML, CSS Grid, and jQuery
+        </li>
+        <li>freeCodeCamp project
+        </li>
+      </p>
+
+      <hr/>
+
+      <div class="text-center">
+        <h1><mark>JavaScript Calculator</mark></h1>
+        <img src="https://media.giphy.com/media/l0HUjwCNlZaCijT9K/giphy.gif" class="rounded" alt="JavaScript Calculator demo gif">
+        <br>
+        <a href="https://codepen.io/ethanryan/full/MryqXv" target="blank">CodePen</a>
+      </div>
+      <br>
+      <p class="lead">
+        Functional calculator modeled on the iPhone app.
+        <br>
+        <li>Included Easter eggs for certain fun numbers: 420, 666, 1999
+        </li>
+        <li>Built with HTML, CSS Grid, and jQuery
+        </li>
+        <li>freeCodeCamp project
+        </li>
+      </p>
+
+      <hr/>
+
+      <div class="text-center">
+        <h1><mark>Goth Tic-Tac-Toe</mark></h1>
+        <img src="https://cdn-images-1.medium.com/max/800/1*CX5WuyCA_IHn8HHjwM4c4A.png" class="rounded" alt="Goth Tic-Tac-Toe pic">
+        <br>
+        <a href="https://codepen.io/ethanryan/full/zpPxaR/" target="blank">CodePen</a>
+      </div>
+      <br>
+      <p class="lead">
+        Tic-Tac-Toe game made with functional, rudimentary artificial intelligence.
+        <br>
+        <li>Game styles include Classic, Goth, and Weapons
+        </li>
+        <li>Built with HTML, CSS Grid, and jQuery
+        </li>
+        <li>freeCodeCamp project
+        </li>
+      </p>
+
+      <hr/>
+
+      <div class="text-center">
+        <h1><mark>RottenAverage</mark></h1>
+        <img src="https://media.giphy.com/media/3oFzm2yBemy3GJybYc/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+        <br>
+        <a href="https://rotten-average-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/rotten_average_client" target="blank">GitHub</a>
+      </div>
+      <br>
+      <p class="lead">
+        RottenAverage takes a Rotten Tomatoes URL as input, parses that webpages HTML, and returns the average score of that show or movie.
+        <br>
+        <li>Built with a Rails backend and a React frontend
+        </li>
+        <li>Utilized the Nokogiri gem
+        </li>
+      </p>
+
+      <hr/>
+
+      <div class="text-center">
+        <h1><mark>BlogPostComments</mark></h1>
+        <img src="https://media.giphy.com/media/l4pTjoc6YF1Zcwtji/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+        <br>
+        <a href="https://blog-post-comments-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/blog-post-comments-client" target="blank">GitHub</a>
+      </div>
+      <br>
+      <p class="lead">
+        BlogPostComments allows users to toggle comments from read-only to edit-mode with a click.
+        <br>
+        <li>Built with a Rails backend and a React frontend
+        </li>
+        <li>Utilized html-react-parser to allow users to add HTML tags to their posts and comments so they can style text and embed images and gifs
         </li>
       </p>
 
