updated WordNerds to link to custom domain name

--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
 
       <div class="text-center">
         <h1><mark>WordNerds</mark></h1>
-        <a href="http://word-nerds-client.herokuapp.com/" target="blank">
+        <a href="http://wordnerds.co/" target="blank">
           <img src="https://media.giphy.com/media/cJYcBe9TCLpT2/giphy.gif" class="rounded" alt="Word Nerds demo gif">
         </a>
         <br>
-        <a href="http://word-nerds-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/word_nerds_client" target="blank">GitHub</a>
+        <a href="http://wordnerds.co/" target="blank">WordNerds.co</a> | <a href="https://github.com/ethanryan/word_nerds_client" target="blank">GitHub</a>
       </div>
       <br>
       <p class="lead">
