added simple-shadow to h1s in work section

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <br>
 
       <div class="text-center">
-        <h1><mark>WordNerds</mark></h1>
+        <h1 class="simple-shadow">WordNerds</h1>
         <a href="http://wordnerds.co/" target="blank">
           <img src="https://media.giphy.com/media/cJYcBe9TCLpT2/giphy.gif" class="rounded" alt="Word Nerds demo gif">
         </a>
@@ -352,7 +352,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>Trivia Boyz</mark></h1>
+        <h1 class="simple-shadow">Trivia Boyz</h1>
         <a href="http://trivia-boyz-client.herokuapp.com/" target="blank">
           <img src="https://media.giphy.com/media/2R2NxHmHzKUrS/giphy.gif" class="rounded" alt="Trivia Boyz demo gif">
         </a>
@@ -376,7 +376,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>ToDoToday</mark></h1>
+        <h1 class="simple-shadow">ToDoToday</h1>
         <img src="https://media.giphy.com/media/3oKIPjLyDHikcHJhAY/giphy.gif" class="rounded" alt="ToDoToday demo gif">
         <br>
         <a href="https://github.com/ethanryan/to_do_today_app" target="blank">GitHub</a>
@@ -394,7 +394,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>Show the Local Weather</mark></h1>
+        <h1 class="simple-shadow">Show the Local Weather</h1>
         <img src="https://media.giphy.com/media/3ohjUQwHFgb8Ib5TDG/giphy.gif" class="rounded" alt="Show the Local Weather demo gif">
         <br>
         <a href="https://codepen.io/ethanryan/full/yPzBEo/" target="blank">CodePen</a>
@@ -414,7 +414,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>JavaScript Calculator</mark></h1>
+        <h1 class="simple-shadow">JavaScript Calculator</h1>
         <img src="https://media.giphy.com/media/l0HUjwCNlZaCijT9K/giphy.gif" class="rounded" alt="JavaScript Calculator demo gif">
         <br>
         <a href="https://codepen.io/ethanryan/full/MryqXv" target="blank">CodePen</a>
@@ -434,7 +434,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>Goth Tic-Tac-Toe</mark></h1>
+        <h1 class="simple-shadow">Goth Tic-Tac-Toe</h1>
         <img src="https://cdn-images-1.medium.com/max/800/1*CX5WuyCA_IHn8HHjwM4c4A.png" class="rounded" alt="Goth Tic-Tac-Toe pic">
         <br>
         <a href="https://codepen.io/ethanryan/full/zpPxaR/" target="blank">CodePen</a>
@@ -454,7 +454,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>RottenAverage</mark></h1>
+        <h1 class="simple-shadow">RottenAverage</h1>
         <img src="https://media.giphy.com/media/3oFzm2yBemy3GJybYc/giphy.gif" class="rounded" alt="Word Nerds demo gif">
         <br>
         <a href="https://rotten-average-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/rotten_average_client" target="blank">GitHub</a>
@@ -472,7 +472,7 @@
       <hr/>
 
       <div class="text-center">
-        <h1><mark>BlogPostComments</mark></h1>
+        <h1 class="simple-shadow">BlogPostComments</h1>
         <img src="https://media.giphy.com/media/l4pTjoc6YF1Zcwtji/giphy.gif" class="rounded" alt="Word Nerds demo gif">
         <br>
         <a href="https://blog-post-comments-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/blog-post-comments-client" target="blank">GitHub</a>
