--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="text-center">
         <h1 class="simple-shadow">WordNerds</h1>
         <a href="http://wordnerds.co/" target="blank">
-          <img src="https://media.giphy.com/media/cJYcBe9TCLpT2/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+          <img src="https://media.giphy.com/media/cJYcBe9TCLpT2/giphy.gif" class="rounded work-demo-gif" alt="Word Nerds demo gif">
         </a>
         <br>
         <a href="http://wordnerds.co/" target="blank">WordNerds.co</a> | <a href="https://github.com/ethanryan/word_nerds_client" target="blank">GitHub</a>
@@ -354,7 +354,7 @@
       <div class="text-center">
         <h1 class="simple-shadow">Trivia Boyz</h1>
         <a href="http://trivia-boyz-client.herokuapp.com/" target="blank">
-          <img src="https://media.giphy.com/media/2R2NxHmHzKUrS/giphy.gif" class="rounded" alt="Trivia Boyz demo gif">
+          <img src="https://media.giphy.com/media/2R2NxHmHzKUrS/giphy.gif" class="rounded work-demo-gif" alt="Trivia Boyz demo gif">
         </a>
         <br>
         <a href="http://trivia-boyz-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/trivia_boyz" target="blank">GitHub</a>
@@ -377,7 +377,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">ToDoToday</h1>
-        <img src="https://media.giphy.com/media/3oKIPjLyDHikcHJhAY/giphy.gif" class="rounded" alt="ToDoToday demo gif">
+        <img src="https://media.giphy.com/media/3oKIPjLyDHikcHJhAY/giphy.gif" class="rounded work-demo-gif" alt="ToDoToday demo gif">
         <br>
         <a href="https://github.com/ethanryan/to_do_today_app" target="blank">GitHub</a>
       </div>
@@ -395,7 +395,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">Show the Local Weather</h1>
-        <img src="https://media.giphy.com/media/3ohjUQwHFgb8Ib5TDG/giphy.gif" class="rounded" alt="Show the Local Weather demo gif">
+        <img src="https://media.giphy.com/media/3ohjUQwHFgb8Ib5TDG/giphy.gif" class="rounded work-demo-gif" alt="Show the Local Weather demo gif">
         <br>
         <a href="https://codepen.io/ethanryan/full/yPzBEo/" target="blank">CodePen</a>
       </div>
@@ -415,7 +415,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">JavaScript Calculator</h1>
-        <img src="https://media.giphy.com/media/l0HUjwCNlZaCijT9K/giphy.gif" class="rounded" alt="JavaScript Calculator demo gif">
+        <img src="https://media.giphy.com/media/l0HUjwCNlZaCijT9K/giphy.gif" class="rounded work-demo-gif" alt="JavaScript Calculator demo gif">
         <br>
         <a href="https://codepen.io/ethanryan/full/MryqXv" target="blank">CodePen</a>
       </div>
@@ -435,7 +435,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">Goth Tic-Tac-Toe</h1>
-        <img src="https://cdn-images-1.medium.com/max/800/1*CX5WuyCA_IHn8HHjwM4c4A.png" class="rounded" alt="Goth Tic-Tac-Toe pic">
+        <img src="https://cdn-images-1.medium.com/max/800/1*CX5WuyCA_IHn8HHjwM4c4A.png" class="rounded work-demo-gif" alt="Goth Tic-Tac-Toe pic">
         <br>
         <a href="https://codepen.io/ethanryan/full/zpPxaR/" target="blank">CodePen</a>
       </div>
@@ -455,7 +455,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">RottenAverage</h1>
-        <img src="https://media.giphy.com/media/3oFzm2yBemy3GJybYc/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+        <img src="https://media.giphy.com/media/3oFzm2yBemy3GJybYc/giphy.gif" class="rounded  work-demo-gif" alt="RottenAverage demo gif">
         <br>
         <a href="https://rotten-average-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/rotten_average_client" target="blank">GitHub</a>
       </div>
@@ -473,7 +473,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">BlogPostComments</h1>
-        <img src="https://media.giphy.com/media/l4pTjoc6YF1Zcwtji/giphy.gif" class="rounded" alt="Word Nerds demo gif">
+        <img src="https://media.giphy.com/media/l4pTjoc6YF1Zcwtji/giphy.gif" class="rounded work-demo-gif" alt="BlogPostComments demo gif">
         <br>
         <a href="https://blog-post-comments-client.herokuapp.com/" target="blank">Website</a> | <a href="https://github.com/ethanryan/blog-post-comments-client" target="blank">GitHub</a>
       </div>
