updated goth tic-tac-toe gif

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
       <div class="text-center">
         <h1 class="simple-shadow">Goth Tic-Tac-Toe</h1>
-        <img src="https://cdn-images-1.medium.com/max/800/1*CX5WuyCA_IHn8HHjwM4c4A.png" class="rounded work-demo-gif" alt="Goth Tic-Tac-Toe pic">
+        <img src="https://media.giphy.com/media/EExe0irrVYSg6Mxd4H/giphy.gif" class="rounded work-demo-gif" alt="Goth Tic-Tac-Toe pic">
         <br>
         <a href="https://codepen.io/ethanryan/full/zpPxaR/" target="blank">CodePen</a>
       </div>
